trying to fix the video playback on mobile

--- a/src/assets/components/about/about.css
+++ b/src/assets/components/about/about.css
@@ -72,7 +72,7 @@
 @media only screen and (max-width: 480px) {
     .body-about-section {
         margin-top: 42vh;
-        margin-bottom: 32vh;
+        margin-bottom: 42vh;
     }
     .about-h6-text {
         font-size: 1rem;
